# Sales-Forecast

./: LICENSE  README.md  prediciton.ipynb  prediction_with_pytorch.py  pyproject.toml  question_and_answer.ipynb  simple_model_scikit_learn.ipynb  visualize_data.py
documentation/: QandA.tex  appendix.tex  main.aux  main.fdb_latexmk  main.fls  main.tex  prediction_model.tex
src/helpers/: computations.py  data.py  plotting.py  streamlit_data.py  streamlit_pytorch_model.py
src/models/: data_models.py  enums.py  hyper_parameter.py
src/predection_model/: data_preparation.py  pytorch_model.py
