[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
multi_line_output = 3
profile = "black"
src_paths = ["src", "training_data", "testing_data"]

[tool.poetry]
name = "DP_DC"
version = "0.0.1"
description = ""
authors = ["keerthi krishna PARVATHANENI <krishna.klume@gmail.com>"]

[tool.poetry.dependencies]
numpy = "1.*"
matplotlib = "3.8.3"
python = "3.11.*"
pandas = "2.2.2"
scikit-learn = "1.4.2"
pyarrow = "16.0.0"
pydantic = ">=1.10.1"
poethepoet = "^0.10.0"

[tool.poe.tasks]
force-cuda11 = "python -m pip install torch==1.8.0+cu111 torchvision==0.9.0+cu111 -f https://download.pytorch.org/whl/torch_stable.html"

[tool.poetry.dev-dependencies]
black = "22.*"
isort = "5.*"

[tool.poetry.group.dev.dependencies]
black = {version = "^22.8.0", allow-prereleases = true}

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
